# ritedoc

./: .gitignore  DEPLOYMENT.md  README.md  index.html  package.json  pnpm-lock.yaml  test_report_50_notes.md  vite.config.ts
client_sops/: sop_astalty.md  sop_brevity.md  sop_caremaster.md  sop_lumary.md  sop_shiftcare.md  sop_supportability.md
dashboard/: index.html  webhooks.md
dashboard/css/: dashboard.css
docs/: FILE_AUDIT.md  faq.md  incident_sops_summary.md  launch_setup_status.md  nanoclaw_setup_guide.md  onboarding_flow.md  ritedoc_build_summary.md  ritedoc_test_results.md
email/: brevo_check.py  ritedoc_email_sequence.md  send_email.py
frontend/: index.html
knowledge_base/: agent_knowledge_base.md  audit_compliance_scoring.md  incident_documentation_mapping.md  ndis_practice_standards.md  pace_system.md  progress_note_standards.md
launch/: carrd_setup_guide.md  launch_checklist.md
legal/: acceptable_use_policy.md  client_service_agreement.md  data_handling_policy.md  privacy_policy.md  terms_of_service.md
marketing/: RiteDoc_Launch_Kit.md  RiteDoc_Social_Posts_Captions.md  facebook_group_posts.md  ritedoc_landing.html  social_post_review.md
mobile-app/: .easignore  .gitignore  BUILD_GUIDE.md  MODEL_SETUP.md  README.md  app.json  eas.json  package-lock.json  package.json
nanoclaw/: .gitignore  Dockerfile  README.md  docker-compose.yml
operations/: biab_agency_dashboard_spec.md  daily_compliance_monitoring_workflow.md  disaster_recovery_plan.md  internal_operations_manual.md  loom_video_guide.md  readycompliant_admin_dashboard_spec.md  system_flow_document.md
ritedoc-landing/: .env.example  package.json
specs/: cartridge_system_spec.md  goal_review_panel_spec.md  hardware_detection_spec.md  master_reference_v6.md  tauri_self_fix_spec.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cartridges/: incident_sops.json  policies.json  red_flags.json  red_flags_v2.json  rubric.json  system_prompts.json
src-tauri/src/: activation.rs  cartridge_updater.rs  cartridges.rs  commands.rs  connector.rs  csv_parser.rs  db.rs  diagnostic_reporter.rs  engine.rs  form_generator.rs  lib.rs  llm_integration.rs  localities.txt  main.rs  models.rs  online_mode.rs  pii_scrubber.rs  pipeline.rs  quality_scan.rs  regulation_sync.rs  safety_scan.rs  scrubber.rs  self_fix.rs  token_store.rs
support/: dify_bot_spec.md  retell_call_script.md  retell_twilio_integration_spec.md  sentry_integration_spec.md  support_sop.md  troubleshooting_matrix.md
testing/: csv_export_headers.md  nanoclaw_pii_rulebook.md  synthetic_dirty_notes.csv  test_results_50.json
tests/: test_50_notes.py  test_agent_prompts.py  test_results.json
tools/: README.md  generate_keys.js  package.json  pnpm-lock.yaml  ritedoc_signing_key.pub  sign_cartridge.js
video/: video_prompts_guide.md  video_prompts_v2.md  video_review_notes.txt
website/: package.json  pnpm-lock.yaml
worker/: package.json  pnpm-lock.yaml  schema.sql  seed.sql  tsconfig.json  wrangler.toml
(+97 files in other folders)
