[package]
name = "ritedoc"
version = "1.0.0"
description = "RiteDoc — Technology-assisted documentation drafting for NDIS support workers"
authors = ["RiteDoc Team"]
edition = "2021"

[lib]
name = "ritedoc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ritedoc"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sysinfo = "0.32"
aho-corasick = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
