[package]
name = "ritedoc"
version = "1.0.0"
description = "RiteDoc — NDIS progress note rewriting tool"
authors = ["RiteDoc Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
once_cell = "1"
csv = "1"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
libc = "0.2"
# Native inference engine (replaces Docker-based Nanoclaw)
llama-cpp-2 = "0.1.143"
encoding_rs = "0.8"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
